--- a/ArtistfyTF/src/main/resources/templates/contract/listContracts.html
+++ b/ArtistfyTF/src/main/resources/templates/contract/listContracts.html
@@ -72,6 +72,9 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/events/list}">Eventos</a>						
 					</div>
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/genres/list}">Genero</a>						
+					</div>
 				</div></li>
 
 
