--- a/ArtistfyTF/src/main/resources/templates/genre/listGenres.html
+++ b/ArtistfyTF/src/main/resources/templates/genre/listGenres.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Artistfy</title>
+<title>2020</title>
 
 <!-- Custom fonts for this template-->
 <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
@@ -33,25 +33,26 @@
 		<ul
 			class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
 			id="accordionSidebar">
+
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
-				th:href="@{/artists/list}">
-				<div class="sidebar-brand-icon">
-				<img th:src="@{/img/artistfy.png}" height="50"  alt="logo"
-									align="middle"></img>
-				<!--  <i class="fas fa-leaf"></i> -->	
+				th:href="@{/categories/list}">
+				<div class="sidebar-brand-icon rotate-n-15">
+					<i class="fas fa-leaf"></i>
 				</div>
-			<!-- <div class="sidebar-brand-text mx-2">Programación en Web</div>-->
+				<div class="sidebar-brand-text mx-2">Programación en web</div>
 			</a>
 
 			<!-- Divider -->
 			<hr class="sidebar-divider my-0">
 
 
+
+
 			<!-- Nav Item - Pages Collapse Menu -->
 			<li class="nav-item"><a class="nav-link collapsed" href="#"
-				data-target="#collapseTwo" aria-expanded="false"
+				data-target="#collapseTwo" aria-expanded=true
 				aria-controls="collapseTwo"> <i class="fas fa-fw fa-cog"></i> <span>Men&uacute;</span>
 			</a>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
@@ -72,6 +73,11 @@
 						<a class="collapse-item" th:href="@{/genres/list}">Genero</a>						
 					</div>
 				</div></li>
+
+
+
+			<!-- Divider -->
+			<hr class="sidebar-divider">
 
 			<!-- Sidebar Toggler (Sidebar) -->
 
@@ -118,7 +124,6 @@
 								class="mr-2 d-none d-lg-inline text-gray-600 small"><img
 									th:src="@{/img/logout.png}" width="30" height="30" alt="logo"
 									align="middle"></img></span>
-
 						</a> <!-- Dropdown - User Information -->
 							<div
 								class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -127,8 +132,8 @@
 									class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Perfil
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#" data-toggle="modal"
-									data-target="#logoutModal"> <i
+								<a class="dropdown-item" href="categories/index"
+									data-toggle="modal" data-target="#logoutModal"> <i
 									class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
 									Cerrar sesión
 								</a>
@@ -143,83 +148,35 @@
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Contratos</h1>
+					<h1 class="h3 mb-4 text-gray-800">Genero</h1>
+
+					<a th:href="@{/genres/new/}" class="btn btn-secondary btn-xs">Nuevo</a>
+
 
 					<hr class="sidebar-divider">
-					<div th:object="${contract}" th:remove="tag">
-						<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger"
-							role="alert">
-							<li th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
-						</ul>
-					</div>
 
-					<form th:action="@{/contracts/save}" th:object="${contract}"
-						method="post">
-						<div class="form-group row">
-							<label for="name" class="col-sm-2 col-form-label">Codigo</label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{idContract}" class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('idContract')}"
-									th:errors="*{idContract}"></small>
-							</div>
-						</div>
-						
-						<div class="form-group row">
-							<label for="artist">Artista:</label>
-							<div class="col-sm-6">
-								<select class="form-control" th:field="*{artist.idArtist}">
-									<option th:each="a: ${listArtists}"
-										th:value="${a.idArtist}" th:text="${a.firstName}"
-										th:selected="(${a.idArtist} == *{artist.idArtist})"></option>
-								</select>
-							</div>
-						</div>
-						
-						<div class="form-group row">
-							<label for="description" class="col-sm-2 col-form-label">Descripcion</label>
-							<div class="col-sm-6">
-								<textarea type="text" th:field="*{descriptionContract}" class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('descriptionContract')}"
-									th:errors="*{descriptionContract}"></small>
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="price" class="col-sm-2 col-form-label">Salario</label>
-							<div class="col-sm-6">
-								<input type="number" th:field="*{salary}" class="form-control"
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('salary')}"
-									th:errors="*{salary}"></small>
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="" class="col-sm-2 col-form-label">Direccion</label>
-							<div class="col-sm-6">
-								<input type="text" th:field="*{address}" class="form-control" 
-									th:errorclass="'form-control alert-danger'" /> <small
-									class="form-text text-danger"
-									th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></small>
-							</div>
-						</div>
-						
+					<table class="table table-striped">
+						<thead class="thead-dark">
+							<tr>
+								<th scope="col">Id</th>
+								<th scope="col">Nombre</th>
+								<th scope="col">Operacion</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="cate: ${listGenres}">
+								<<td><a class="btn btn-danger btn-xs"
+									th:text="${cate.idGenre}"></a></td>
+								<td th:text="${cate.nameGenre}"></td>
+								<td><a
+									th:href="@{'/genres/delete/'+${cate.idGenre}}"> <i
+										class="iconf fa fa-trash" style="color: red"></i>
+								</a></td>
+							</tr>
+						</tbody>
+					</table>
 
-						<div class="form-group row">
-							<div class="col-sm-6">
-								<input type="submit" value="Guardar" class="btn btn-secondary"></input>
-								<a href="/contracts/list" class="btn btn-danger">Cancelar</a>
-							</div>
-						</div>
-
-					</form>
-					
 					<p th:text="${mensaje}" class="form-text text-success"></p>
-
-
 
 				</div>
 				<!-- /.container-fluid -->
@@ -262,12 +219,12 @@
 					</button>
 				</div>
 				<div class="modal-body">Seleccione "Cerrar sesión" a
-					continuación si está listo para finalizar su sesión actual</div>
+					continuación si está listo para finalizar su sesión actual.</div>
 				<div class="modal-footer">
 					<button class="btn btn-secondary" type="button"
 						data-dismiss="modal">Cancelar</button>
-					<a class="btn btn-primary" th:href="@{/contracts/index}">Cerrar
-						Sesión</a>
+					<a class="btn btn-primary" th:href="@{/categories/index}">Cerrar
+						sesión</a>
 				</div>
 			</div>
 		</div>
