--- a/ArtistfyTF/src/main/resources/templates/artist/artist.html
+++ b/ArtistfyTF/src/main/resources/templates/artist/artist.html
@@ -153,7 +153,7 @@
 					</div>
 
 					<form th:action="@{/artists/save}" th:object="${artist}"
-						method="post">
+						method="post" enctype="multipart/form-data">
 						<div class="form-group row">
 							<label for="name" class="col-sm-2 col-form-label">Codigo</label>
 							<div class="col-sm-6">
@@ -243,6 +243,14 @@
 							</div>
 
 						</div>
+						
+						<div class="form-group row">
+					<label for="file" class="col-sm-2 col-form-label ">Foto:</label>
+					<div class="col-sm-6">
+						<input type="file" name="file" class="form-control"
+							th:text="${artist.foto}" required="required" />
+					</div>
+				</div>
 
 
 
