--- a/ArtistfyTF/src/main/resources/templates/artist/artistupd.html
+++ b/ArtistfyTF/src/main/resources/templates/artist/artistupd.html
@@ -254,7 +254,7 @@
 							<label for="file" class="col-sm-2 col-form-label ">Foto:</label>
 							<div class="col-sm-6">
 								<input type="file" name="file" class="form-control"
-									th:text="${artist.foto}"  />
+									th:text="${artist.foto}" required="required"  />
 							</div>
 						</div>
 
