--- a/ArtistfyTF/src/main/resources/templates/event/listEvents.html
+++ b/ArtistfyTF/src/main/resources/templates/event/listEvents.html
@@ -188,7 +188,7 @@
 						<thead class="thead-dark">
 							<tr>
 								<th scope="col">Id</th>
-								<th scope="col">Nombre</th>
+								<th scope="col">NombreEvento</th>
 								<th scope="col">Descripcion</th>
 								<th scope="col">Requisitos</th>
 								<th scope="col">Salario</th>
@@ -199,7 +199,9 @@
 						</thead>
 						<tbody>
 							<tr th:each="e: ${listEvents}">
-								<td th:text="${e.idEvent}"></td>
+							<td><a class="btn btn-danger btn-xs"
+									th:href="@{/events/viewEv/} + ${e.idEvent}"
+									th:text="${e.idEvent}"></a></td>
 								<td th:text="${e.name}"></td>
 								<td th:text="${e.description}"></td>
 								<td th:text="${e.requeriments}"></td>
