--- a/ArtistfyTF/src/main/resources/templates/organizer/organizer.html
+++ b/ArtistfyTF/src/main/resources/templates/organizer/organizer.html
@@ -160,7 +160,7 @@
 					</div>
 
 					<form th:action="@{/organizers/save}" th:object="${organizer}"
-						method="post">
+						method="post" enctype="multipart/form-data">
 						<div class="form-group row">
 							<label for="name" class="col-sm-2 col-form-label">Codigo</label>
 							<div class="col-sm-6">
@@ -218,6 +218,14 @@
 									th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></small>
 							</div>
 						</div>
+						
+							<div class="form-group row">
+					<label for="file" class="col-sm-2 col-form-label ">Foto:</label>
+					<div class="col-sm-6">
+						<input type="file" name="file" class="form-control"
+							th:text="${organizer.foto}" required="required" />
+					</div>
+				</div>
 
 
 						<div class="form-group row">
