--- a/ArtistfyTF/src/main/resources/templates/genre/genre.html
+++ b/ArtistfyTF/src/main/resources/templates/genre/genre.html
@@ -75,6 +75,9 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/roles/list}">Roles</a>
 					</div>
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/contracts/reports}">Reportes</a>
+					</div>
 					<!--<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/users/list}">Usuarios</a>
 					</div>
